--- a/libexec/telnetd/Makefile
+++ b/libexec/telnetd/Makefile
@@ -14,10 +14,10 @@
 # IMPLIED WARRANTIES, INCLUDING, WITHOUT LIMITATION, THE IMPLIED
 # WARRANTIES OF MERCHANTIBILITY AND FITNESS FOR A PARTICULAR PURPOSE.
 #
-#	@(#)Makefile	5.6 (Berkeley) 11/10/89
+#	@(#)Makefile	5.7 (Berkeley) 02/28/90
 #
 
-DEFINES=
+DEFINES= -DNEED_GETTOS
 LIBC=	/lib/libc.a
 # 4.4BSD
 #		LIBS= -lutil -ltermcap
