checkpoing for pmake

--- a/share/Makefile
+++ b/share/Makefile
@@ -14,10 +14,10 @@
 # IMPLIED WARRANTIES, INCLUDING, WITHOUT LIMITATION, THE IMPLIED
 # WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE.
 #
-#	@(#)Makefile	5.1 (Berkeley) 05/28/89
+#	@(#)Makefile	5.2 (Berkeley) 03/24/90
 #
 
-SUBDIR=	man me ms skel termcap zic
+SUBDIR=	man me ms skel termcap zoneinfo
 
 all clean cleandir depend install lint tags: FRC
 	@-for i in ${SUBDIR}; do \
