--- a/sbin/routed/query/Makefile
+++ b/sbin/routed/query/Makefile
@@ -1,45 +1,7 @@
-#
-# Copyright (c) 1987 Regents of the University of California.
-# All rights reserved.
-#
-# Redistribution and use in source and binary forms are permitted
-# provided that the above copyright notice and this paragraph are
-# duplicated in all such forms and that any documentation,
-# advertising materials, and other materials related to such
-# distribution and use acknowledge that the software was developed
-# by the University of California, Berkeley.  The name of the
-# University may not be used to endorse or promote products derived
-# from this software without specific prior written permission.
-# THIS SOFTWARE IS PROVIDED ``AS IS'' AND WITHOUT ANY EXPRESS OR
-# IMPLIED WARRANTIES, INCLUDING, WITHOUT LIMITATION, THE IMPLIED
-# WARRANTIES OF MERCHANTIBILITY AND FITNESS FOR A PARTICULAR PURPOSE.
-#
-#	@(#)Makefile	5.5 (Berkeley) 09/19/88
-#
-CFLAGS=	-O
-LIBC=	/lib/libc.a
-SRCS=	query.c trace.c
-MAN=
+#	@(#)Makefile	5.6 (Berkeley) 05/11/90
 
-all: query trace
+PROG=	query
+NOMAN=	noman
 
-# test programs and utilities
-query: ${LIBC}
-	${CC} ${CFLAGS} -o $@ $@.c
-
-trace: ${LIBC}
-	${CC} ${CFLAGS} -o $@ $@.c
-
-install:
-
-clean:
-	rm -f core query trace
-
-cleandir: clean
-	rm -f ${MAN} tags .depend
-
-depend: ${SRCS}
-	mkdep -p ${SRCS}
-
-tags: ${SRCS}
-	ctags ${SRCS}
+.include "../../Makefile.inc"
+.include <bsd.prog.mk>
