--- a/old/eqn/checkeq/Makefile
+++ b/old/eqn/checkeq/Makefile
@@ -1,6 +1,7 @@
-#	@(#)Makefile	5.2 (Berkeley) 05/11/90
+#	@(#)Makefile	5.3 (Berkeley) 05/11/90
 
 PROG=	checkeq
 NOMAN=	noman
 
+.include "../../Makefile.inc"
 .include <bsd.prog.mk>
