--- a/old/eqn/neqn/Makefile
+++ b/old/eqn/neqn/Makefile
@@ -1,4 +1,4 @@
-#	@(#)Makefile	5.4 (Berkeley) 05/11/90
+#	@(#)Makefile	5.5 (Berkeley) 05/11/90
 
 PROG=	neqn
 CFLAGS+=-DNEQN -I. -I${.CURDIR}/../common_source
@@ -16,4 +16,5 @@ e.c:
 	mv y.tab.c e.c
 	mv y.tab.h e.def
 
+.include "../../Makefile.inc"
 .include <bsd.prog.mk>
