--- a/usr.sbin/timed/timedc/Makefile
+++ b/usr.sbin/timed/timedc/Makefile
@@ -1,4 +1,4 @@
-#	@(#)Makefile	5.1 (Berkeley) 05/11/90
+#	@(#)Makefile	5.2 (Berkeley) 05/11/90
 
 PROG=	timedc
 SRCS=	cmds.c cmdtab.c timedc.c byteorder.c measure.c cksum.${MACHINE}.c
@@ -7,4 +7,5 @@ BINOWN=	root
 BINMODE=4555
 .PATH:	${.CURDIR}/../timed
 
+.include "../../Makefile.inc"
 .include <bsd.prog.mk>
