--- a/old/libndbm/Makefile
+++ b/old/libndbm/Makefile
@@ -1,4 +1,4 @@
-#	@(#)Makefile	5.7 (Berkeley) 05/11/90
+#	@(#)Makefile	5.8 (Berkeley) 05/13/90
 
 LIB=	dbm
 SRCS=	dbm.c
@@ -10,4 +10,5 @@ beforeinstall:
 	install -c -o ${BINOWN} -g ${BINGRP} -m ${MANMODE} ${.CURDIR}/dbm.h \
 	    ${DESTDIR}/usr/include/dbm.h
 
+.include <bsd.own.mk>
 .include <bsd.lib.mk>
