wrong executable directory

--- a/usr.sbin/lpr/filters/Makefile
+++ b/usr.sbin/lpr/filters/Makefile
@@ -1,7 +1,7 @@
-#	@(#)Makefile	5.8 (Berkeley) 05/11/90
+#	@(#)Makefile	5.9 (Berkeley) 05/13/90
 
 PROG=	lpf
 NOMAN=	noman
-BINDIR=	/usr/libexec
+BINDIR=	/usr/libexec/lpr
 
 .include <bsd.prog.mk>
