--- a/usr.sbin/lpr/lprm/Makefile
+++ b/usr.sbin/lpr/lprm/Makefile
@@ -1,8 +1,11 @@
-#	@(#)Makefile	5.1 (Berkeley) 05/11/90
+#	@(#)Makefile	5.2 (Berkeley) 05/13/90
 
 PROG=	lprm
 CFLAGS+=-I${.CURDIR}/../common_source
 SRCS=	lprm.c rmjob.c startdaemon.c common.c printcap.c
+BINOWN=	root
+BINGRP=	daemon
+BINMODE=6555
 .PATH:	${.CURDIR}/../common_source
 
 .include "../../Makefile.inc"
