--- a/usr.bin/lorder/Makefile
+++ b/usr.bin/lorder/Makefile
@@ -1,4 +1,4 @@
-#	@(#)Makefile	5.2 (Berkeley) 05/11/90
+#	@(#)Makefile	5.3 (Berkeley) 05/18/90
 
 MAN1=	lorder.0
 
@@ -13,5 +13,5 @@ install: maninstall
 	install -c -o ${BINOWN} -g ${BINGRP} -m ${BINMODE} \
 	    ${.CURDIR}/lorder.sh ${DESTDIR}/${BINDIR}/lorder
 
-.include <bsd.own.mk>
+.include <bsd.prog.mk>
 .include <bsd.man.mk>
