wrong link order

--- a/sbin/newfs/Makefile
+++ b/sbin/newfs/Makefile
@@ -1,10 +1,10 @@
-#	@(#)Makefile	7.11 (Berkeley) 05/11/90
+#	@(#)Makefile	7.12 (Berkeley) 05/24/90
 
 PROG=	newfs
 CFLAGS+=-DMFS
 SRCS=	newfs.c mkfs.c
 MAN8=	newfs.0
 LINKS=	${BINDIR}/newfs ${BINDIR}/mount_mfs
-MLINKS=	mfs.8 newfs.8
+MLINKS=	newfs.8 mfs.8
 
 .include <bsd.prog.mk>
