--- a/usr.sbin/sa/Makefile
+++ b/usr.sbin/sa/Makefile
@@ -1,7 +1,8 @@
-#	@(#)Makefile	5.3 (Berkeley) 05/11/90
+#	@(#)Makefile	5.4 (Berkeley) 05/24/90
 
 PROG=	sa
 MAN8=	sa.0
+MLINKS=	sa.8 accton.8
 
 .include <bsd.prog.mk>
 
