--- a/sbin/fastboot/Makefile
+++ b/sbin/fastboot/Makefile
@@ -1,12 +1,13 @@
-#	@(#)Makefile	5.4 (Berkeley) 05/11/90
+#	@(#)Makefile	5.5 (Berkeley) 05/24/90
 
 MAN8=	fastboot.0
+MLINKS=	fastboot.8 fasthalt.8
 
 all fastboot: ${MAN8}
 
 clean cleandir depend lint tags:
 
-install: maninstall
+beforeinstall:
 	install -c -o ${BINOWN} -g ${BINGRP} -m ${BINMODE} \
 	    ${.CURDIR}/fastboot.sh ${DESTDIR}${BINDIR}/fastboot
 	install -c -o ${BINOWN} -g ${BINGRP} -m ${BINMODE} \
