--- a/usr.bin/whatis/Makefile
+++ b/usr.bin/whatis/Makefile
@@ -1,7 +1,8 @@
-#	@(#)Makefile	5.2 (Berkeley) 05/11/90
+#	@(#)Makefile	5.3 (Berkeley) 05/27/90
 
 PROG=	whatis
 SRCS=	whatis.c config.c
 .PATH:	${.CURDIR}/../man
 
+.include "../../Makefile.inc"
 .include <bsd.prog.mk>
