--- a/contrib/bib/doc/USD.doc/Makefile
+++ b/contrib/bib/doc/USD.doc/Makefile
@@ -3,11 +3,11 @@
 # All rights reserved.  The Berkeley software License Agreement
 # specifies the terms and conditions for redistribution.
 #
-#	@(#)Makefile	6.2 (Berkeley) 05/28/90
+#	@(#)Makefile	6.3 (Berkeley) 05/28/90
 #
 SRCS=	bibdoc.ms
 MACROS=	-i char.macros -ms
-PRINTER=Plp
+PRINTER=Pps
 BIB=	bib
 TROFF=	ditroff -${PRINTER}
 
