--- a/usr.bin/at/at/Makefile
+++ b/usr.bin/at/at/Makefile
@@ -1,6 +1,8 @@
-#	@(#)Makefile	5.10 (Berkeley) 05/11/90
+#	@(#)Makefile	5.11 (Berkeley) 05/29/90
 
 PROG=	at
+BINOWN=	root
+BINMODE=4555
 
 .include "../../Makefile.inc"
 .include <bsd.prog.mk>
