--- a/usr.bin/at/atrm/Makefile
+++ b/usr.bin/at/atrm/Makefile
@@ -1,6 +1,8 @@
-#	@(#)Makefile	5.1 (Berkeley) 05/11/90
+#	@(#)Makefile	5.2 (Berkeley) 05/29/90
 
 PROG=	atrm
+BINOWN=	root
+BINMODE=4555
 
 .include "../../Makefile.inc"
 .include <bsd.prog.mk>
