--- a/old/Makefile
+++ b/old/Makefile
@@ -1,5 +1,5 @@
-#	@(#)Makefile	5.1 (Berkeley) 05/31/90
+#	@(#)Makefile	5.2 (Berkeley) 05/31/90
 
-SUBDIR=	compact crypt make more od talk
+SUBDIR=	compact crypt make more od talk yacc
 
 .include <bsd.subdir.mk>
