--- a/share/Makefile
+++ b/share/Makefile
@@ -1,6 +1,5 @@
-#	@(#)Makefile	5.3 (Berkeley) 05/11/90
+#	@(#)Makefile	5.4 (Berkeley) 06/01/90
 
-# zoneinfo needs conversion
-SUBDIR=	man me misc ms skel tabset termcap tmac zoneinfo
+SUBDIR=	man me misc mk ms skel tabset termcap tmac zoneinfo
 
 .include <bsd.subdir.mk>
