--- a/sbin/fsck/Makefile
+++ b/sbin/fsck/Makefile
@@ -1,9 +1,8 @@
-#	@(#)Makefile	5.13 (Berkeley) 05/11/90
+#	@(#)Makefile	5.14 (Berkeley) 06/01/90
 
 PROG=	fsck
 SRCS=	dir.c inode.c main.c pass1.c pass1b.c pass2.c pass3.c pass4.c \
-	pass5.c preen.c setup.c utilities.c ufs_subr.c ufs_tables.c \
-	ufs_subr.c ufs_tables.c
+	pass5.c preen.c setup.c utilities.c ufs_subr.c ufs_tables.c
 .PATH:	${.CURDIR}/../../sys/ufs
 
 .include <bsd.prog.mk>
