use kvm_nlist to avoid numerous lseeks of nlist; use kvm_read to avoid duplication.

--- a/usr.bin/netstat/Makefile
+++ b/usr.bin/netstat/Makefile
@@ -1,8 +1,10 @@
-#	@(#)Makefile	5.13 (Berkeley) 05/11/90
+#	@(#)Makefile	5.14 (Berkeley) 06/18/90
 
 PROG=	netstat
 SRCS=	host.c inet.c if.c main.c mbuf.c route.c unix.c ns.c iso.c
 BINGRP=	kmem
 BINMODE=2555
+LDADD=	-lutil
+DPADD=	${LIBUTIL}
 
 .include <bsd.prog.mk>
