--- a/include/Makefile
+++ b/include/Makefile
@@ -1,4 +1,4 @@
-#	@(#)Makefile	5.36 (Berkeley) 06/08/90
+#	@(#)Makefile	5.37 (Berkeley) 06/25/90
 #
 # Doing a make install builds /usr/include
 #
@@ -60,15 +60,18 @@ install: ${SHARED}
 	    ${DESTDIR}/usr/include/Makefile
 	rm -f ${DESTDIR}/usr/include/machine
 	ln -s ./${MACHINE} ${DESTDIR}/usr/include/machine
+	chown ${BINOWN}.${BINGRP} ${DESTDIR}/usr/include/machine;
 	@echo installing ${LSYS}
 	@-for i in ${LSYS}; do \
 		rm -f ${DESTDIR}/usr/include/$$i; \
 		ln -s sys/$$i ${DESTDIR}/usr/include/$$i; \
+		chown ${BINOWN}.${BINGRP} ${DESTDIR}/usr/include/$$i; \
 	done
 	@echo installing ${LMCH}
 	@-for i in ${LMCH}; do \
 		rm -f ${DESTDIR}/usr/include/$$i; \
 		ln -s machine/$$i ${DESTDIR}/usr/include/$$i; \
+		chown ${BINOWN}.${BINGRP} ${DESTDIR}/usr/include/$$i; \
 	done
 
 symlinks:
@@ -78,6 +81,7 @@ symlinks:
 		if [ ! -s ${DESTDIR}/usr/include/$$i ]; \
 		then \
 			ln -s /sys/$$i ${DESTDIR}/usr/include/$$i; \
+			chown ${BINOWN}.${BINGRP} ${DESTDIR}/usr/include/$$i; \
 		else \
 			echo ${DESTDIR}/usr/include/$$i not removed; \
 		fi; \
