--- a/usr.bin/ex/Makefile
+++ b/usr.bin/ex/Makefile
@@ -1,4 +1,4 @@
-#	@(#)Makefile	7.31 (Berkeley) 06/26/90
+#	@(#)Makefile	7.32 (Berkeley) 06/28/90
 
 # Things that can be turned off to save space:
 #	LISPCODE (-l flag, showmatch and lisp options)
@@ -34,7 +34,7 @@ CLEANFILES+=ex_vars.h strings xs.c xs.s x.c strings.o
 SHAREDSTRINGS=	sharedstrings
 
 ex_vars.h: ex_data.c
-	csh -f ${.CURDIR}/makeoptions ${.CURDIR}/ex_data.c ${CFLAGS}
+	csh -f ${.CURDIR}/makeoptions ${.CURDIR}/ex_data.c ${CFLAGS:M-[ID]*}
 
 # xstr: hands off!
 strings.o: strings
