--- a/share/doc/usd/17.msmacros/Makefile
+++ b/share/doc/usd/17.msmacros/Makefile
@@ -1,7 +1,7 @@
-#	@(#)Makefile	6.2 (Berkeley) 06/30/90
+#	@(#)Makefile	5.1 (Berkeley) 06/30/90
 
-DIR=	usd/21.msdiffs
-SRCS=	ms.diffs
+DIR=	usd/20.msmacros
+SRCS=	ms
 MACROS=	-msU
 
 paper.${PRINTER}: ${SRCS}
