--- a/share/doc/psd/20.ipctut/Makefile
+++ b/share/doc/psd/20.ipctut/Makefile
@@ -1,21 +1,16 @@
-#	@(#)Makefile	6.4 (Berkeley) 06/30/90
+#	@(#)Makefile	6.5 (Berkeley) 01/02/91
 
 DIR=	ps1/07.ipctut
 SRCS=	tutor.me
-GSRCS=	gremlins
 MACROS=	-me
 EXTRA=	accept.grn dgramread.c dgramsend.c gremlins pipe.c pipe.grn \
 	socketpair.c socketpair.grn strchkread.c streamread.c streamwrite.c \
 	udgramread.c udgramsend.c ustreamread.c ustreamwrite.c
 
-print: paper.${PRINTER} pics.${PRINTER}
+print: paper.${PRINTER}
 	lpr -P${PRINTER} -n paper.${PRINTER}
-	lpr -P${PRINTER} -n pics.P${PRINTER
 
-paper.${PRINTER}: ${SRCS}
-	${TBL} ${SRCS} | ${ROFF} > ${.TARGET}
-
-pics.${PRINTER}: ${GSRCS}
-	${GREMLIN} ${GSRCS} | ${ROFF} > ${.TARGET}
+paper.${PRINTER}: ${SRCS} ${EXTRA}
+	${TBL} ${SRCS} | ${GREMLIN} | ${ROFF} > ${.TARGET}
 
 .include <bsd.doc.mk>
