--- a/usr.bin/pascal/Makefile
+++ b/usr.bin/pascal/Makefile
@@ -1,6 +1,6 @@
-#	@(#)Makefile	5.8 (Berkeley) 06/29/90
+#	@(#)Makefile	5.9 (Berkeley) 01/11/91
 
-SUBDIR=	eyacc how pc pc0 pc2 pc3 pcexterns pdx pi pix pmerge px \
+SUBDIR=	eyacc how libpc pc pc0 pc2 pc3 pcexterns pdx pi pix pmerge px \
 	px_header pxp pxref
 
 .include <bsd.subdir.mk>
