move Fortran libraries out of /usr/src/lib

--- a/usr.bin/f77/Makefile
+++ b/usr.bin/f77/Makefile
@@ -1,5 +1,5 @@
-#	@(#)Makefile	5.7 (Berkeley) 06/17/90
+#	@(#)Makefile	5.8 (Berkeley) 01/13/91
 
-SUBDIR=	f77.${MACHINE} pass1.${MACHINE}
+SUBDIR=	f77.${MACHINE} pass1.${MACHINE} libF77 libI77 libU77
 
 .include <bsd.subdir.mk>
