does the right thing in the mk script

--- a/usr.bin/f77/Makefile
+++ b/usr.bin/f77/Makefile
@@ -1,5 +1,5 @@
-#	@(#)Makefile	5.8 (Berkeley) 01/13/91
+#	@(#)Makefile	5.9 (Berkeley) 01/13/91
 
-SUBDIR=	f77.${MACHINE} pass1.${MACHINE} libF77 libI77 libU77
+SUBDIR=	f77 libF77 libI77 libU77 pass1
 
 .include <bsd.subdir.mk>
