--- a/old/eqn/eqn/Makefile
+++ b/old/eqn/eqn/Makefile
@@ -1,4 +1,4 @@
-#	@(#)Makefile	5.6 (Berkeley) 06/24/90
+#	@(#)Makefile	5.7 (Berkeley) 01/14/91
 
 PROG=	eqn
 CFLAGS+=-I. -I${.CURDIR}/../common_source
@@ -15,6 +15,9 @@ e.c:
 	${YACC} ${YFLAGS} ${.CURDIR}/../common_source/e.y
 	mv y.tab.c e.c
 	mv y.tab.h e.def
+
+e.def: e.c
+.depend: e.def
 
 eqn.0:
 	eqn ${.CURDIR}/eqn.1 | nroff -h -man > ${.TARGET}
