--- a/usr.bin/mt/Makefile
+++ b/usr.bin/mt/Makefile
@@ -1,5 +1,6 @@
-#	@(#)Makefile	5.3 (Berkeley) 05/11/90
+#	@(#)Makefile	5.4 (Berkeley) 01/14/91
 
 PROG=	mt
+CFLAGS+=-I/sys
 
 .include <bsd.prog.mk>
