--- a/usr.bin/systat/Makefile
+++ b/usr.bin/systat/Makefile
@@ -1,6 +1,7 @@
-#	@(#)Makefile	5.7 (Berkeley) 05/11/90
+#	@(#)Makefile	5.8 (Berkeley) 01/14/91
 
 PROG=	systat
+CFLAGS+=-I/sys
 SRCS=	cmds.c cmdtab.c disks.c fetch.c iostat.c keyboard.c vmstat.c main.c \
 	mbufs.c netcmds.c netstat.c pigs.c swap.c
 LDADD=	-lcurses -ltermcap -lm -lutil
