remove y.tab.c, too

--- a/usr.sbin/config/Makefile
+++ b/usr.sbin/config/Makefile
@@ -1,4 +1,4 @@
-#	@(#)Makefile	5.11 (Berkeley) 05/11/90
+#	@(#)Makefile	5.12 (Berkeley) 01/16/91
 
 PROG=	config
 CFLAGS+=-I. -I${.CURDIR}
@@ -7,6 +7,6 @@ SRCS=	config.c main.c lang.c mkioconf.c mkmakefile.c mkglue.c mkheaders.c \
 MAN8=	config.0
 DPADD=	${LIBL}
 LDADD=	-ll
-CLEANFILES+=y.tab.h lang.c config.c
+CLEANFILES+=y.tab.h lang.c config.c y.tab.c
 
 .include <bsd.prog.mk>
