from scratch -- /bin/mail was a security problem, and not worth fixing

--- a/libexec/mail.local/Makefile
+++ b/libexec/mail.local/Makefile
@@ -1,7 +1,7 @@
-#	@(#)Makefile	5.2 (Berkeley) 06/29/90
+#	@(#)Makefile	5.3 (Berkeley) 01/17/91
 
-PROG=	delivermail
-MAN8=	delivermail.0
+PROG=	mail.local
+MAN8=	mail.local.0
 BINOWN=	root
 BINMODE=4555
 
