--- a/old/dlmpcc/Makefile
+++ b/old/dlmpcc/Makefile
@@ -1,6 +1,7 @@
-#	@(#)Makefile	5.6 (Berkeley) 05/11/90
+#	@(#)Makefile	5.7 (Berkeley) 01/17/91
 
 PROG=	dlmpcc
+CFLAGS+=-I/sys
 MAN8=	dlmpcc.0
 MAN4=	mpcc.0 mpcctab.0
 MANSUBDIR=/tahoe
