delete get_date, just use strftime

--- a/libexec/getty/Makefile
+++ b/libexec/getty/Makefile
@@ -1,7 +1,7 @@
-#	@(#)Makefile	5.11 (Berkeley) 07/02/90
+#	@(#)Makefile	5.12 (Berkeley) 01/21/91
 
 PROG=	getty
-SRCS=	main.c init.c subr.c gettytab.c get_date.c ttydefaults.c
+SRCS=	main.c init.c subr.c gettytab.c ttydefaults.c
 DPADD=	${LIBUTIL}
 LDADD=	-lutil
 MAN5=	gettytab.0 ttys.0
