--- a/libexec/telnetd/Makefile
+++ b/libexec/telnetd/Makefile
@@ -1,8 +1,8 @@
-#	@(#)Makefile	5.11 (Berkeley) 06/30/90
+#	@(#)Makefile	5.12 (Berkeley) 01/21/91
 
 PROG=	telnetd
 CFLAGS+=-DNEED_GETTOS -DLINEMODE -DKLUDGELINEMODE -DUSE_TERMIO -DDIAGNOSTICS
-SRCS=	get_date.c gettytab.c global.c slc.c state.c sys_term.c telnetd.c \
+SRCS=	gettytab.c global.c slc.c state.c sys_term.c telnetd.c \
 	termstat.c utility.c
 DPADD=	${LIBUTIL} ${LIBTERM}
 LDADD=	-lutil -ltermcap
