move lint into the pcc directory

--- a/old/pcc/lint/lpass1/Makefile
+++ b/old/pcc/lint/lpass1/Makefile
@@ -1,6 +1,6 @@
-#	@(#)Makefile	5.4 (Berkeley) 07/01/90
+#	@(#)Makefile	5.5 (Berkeley) 01/31/91
 
-MIP=	${.CURDIR}/../../../libexec/pcc/mip
+MIP=	${.CURDIR}/../../mip
 
 PROG=	lintpass1
 CFLAGS+=-I${MIP} -I. -I${.CURDIR}
