--- a/share/misc/Makefile
+++ b/share/misc/Makefile
@@ -1,7 +1,7 @@
-#	@(#)Makefile	5.11 (Berkeley) 01/21/91
+#	@(#)Makefile	5.12 (Berkeley) 02/08/91
 
 FILES=	airport ascii birthtoken eqnchar greek inter.phone man.template \
-	mdoc.template na.phone operator
+	mdoc.template na.phone operator zipcodes
 NOOBJ=	noobj
 
 all clean cleandir depend lint tags:
