--- a/lib/libc/db/btree/Makefile.inc
+++ b/lib/libc/db/btree/Makefile.inc
@@ -1,8 +1,8 @@
-#	@(#)Makefile.inc	5.2 (Berkeley) 01/23/91
+#	@(#)Makefile.inc	5.3 (Berkeley) 02/12/91
 
 # btree sources
 
-.PATH: ${.CURDIR}/btree
+.PATH: ${.CURDIR}/db/btree
 
 SRCS+=	big.c btree.c delete.c insert.c lrucache.c lruhash.c lrutils.c \
 	search.c seq.c split.c storage.c updutils.c utils.c
