--- a/usr.sbin/vipw/Makefile
+++ b/usr.sbin/vipw/Makefile
@@ -1,6 +1,7 @@
-#	@(#)Makefile	5.3 (Berkeley) 05/11/90
+#	@(#)Makefile	5.4 (Berkeley) 02/12/91
 
 PROG=	vipw
+SRCS=	pw_util.c vipw.c
 MAN8=	vipw.0
 
 .include <bsd.prog.mk>
