break kernel nlist stuff into a separate file

--- a/usr.sbin/kvm_mkdb/Makefile
+++ b/usr.sbin/kvm_mkdb/Makefile
@@ -1,6 +1,7 @@
-#	@(#)Makefile	1.2 (Berkeley) 05/11/90
+#	@(#)Makefile	5.1 (Berkeley) 02/12/91
 
 PROG=	kvm_mkdb
+SRCS=	kvm_mkdb.c nlist.c
 MAN8=	kvm_mkdb.0
 
 .include <bsd.prog.mk>
