--- a/usr.bin/passwd/Makefile
+++ b/usr.bin/passwd/Makefile
@@ -1,9 +1,9 @@
-#	@(#)Makefile	5.10 (Berkeley) 02/12/91
+#	@(#)Makefile	5.11 (Berkeley) 02/19/91
 
 PROG=	passwd
 SRCS=	des_rw.c krb_passwd.c local_passwd.c passwd.c pw_copy.c pw_util.c
 DPADD=	${LIBKRB} ${LIBDES}
-.PATH:  ${.CURDIR}/../../usr.bin/chpass ${.CURDIR}/../../sbin/vipw \
+.PATH:  ${.CURDIR}/../../usr.bin/chpass ${.CURDIR}/../../usr.sbin/vipw \
 	${.CURDIR}/../rlogin
 CFLAGS+=-I${.CURDIR} -DKERBEROS -DCRYPT
 LDADD=	-lkrb -ldes
