--- a/games/snake/snscore/Makefile
+++ b/games/snake/snscore/Makefile
@@ -1,7 +1,7 @@
-#	@(#)Makefile	5.1 (Berkeley) 05/11/90
+#	@(#)Makefile	5.2 (Berkeley) 02/28/91
 
 PROG=	snscore
-CFLAGS+=-I${.CURDIR}/..
+CFLAGS+=-I${.CURDIR}/../snake
 NOMAN=	noman
 HIDEGAME=hidegame
 
