--- a/old/Makefile
+++ b/old/Makefile
@@ -1,11 +1,13 @@
-#	@(#)Makefile	5.9 (Berkeley) 01/31/91
+#	@(#)Makefile	5.10 (Berkeley) 02/28/91
 
-SUBDIR=	compact crypt hostid lex make yacc
+SUBDIR=	cc compact cpp crypt hostid lex make more yacc
 
-.if   (${MACHINE} == "tahoe")
-SUBDIR+=pcc
+.if   (${MACHINE} == "hp300")
+SUBDIR+=as.hpux
+.elif (${MACHINE} == "tahoe")
+SUBDIR+=as.tahoe dbx pcc
 .elif ${MACHINE} == "vax"
-SUBDIR+=pcc talk tp
+SUBDIR+=as.vax dbx pcc talk tp
 .endif
 
 .include <bsd.subdir.mk>
