--- a/old/Makefile.inc
+++ b/old/Makefile.inc
@@ -1,4 +1,4 @@
-#	@(#)Makefile.inc	5.1 (Berkeley) 05/31/90
+#	@(#)Makefile.inc	5.2 (Berkeley) 02/28/91
 
-BINDIR?=	/usr/old
+BINDIR?=	/usr/old/bin
 MANDIR?=	/usr/share/man/old/cat
