--- a/old/tbl/Makefile
+++ b/old/tbl/Makefile
@@ -1,6 +1,7 @@
-#	@(#)Makefile	4.6 (Berkeley) 05/11/90
+#	@(#)Makefile	4.7 (Berkeley) 03/01/91
 
 PROG=	tbl
+CFLAGS+=-w
 SRCS=	t0.c t1.c t2.c t3.c t4.c t5.c t6.c t7.c t8.c t9.c tb.c tc.c te.c \
 	tf.c tg.c ti.c tm.c ts.c tt.c tu.c tv.c
 
