--- a/usr.bin/telnet/Makefile
+++ b/usr.bin/telnet/Makefile
@@ -4,13 +4,13 @@
 #
 # %sccs.include.redist.sh%
 #
-#	@(#)Makefile	5.5 (Berkeley) 03/01/91
+#	@(#)Makefile	5.6 (Berkeley) 03/05/91
 #
 
 PROG=	telnet
 
 CFLAGS+=-DTERMCAP -DKLUDGELINEMODE -DUSE_TERMIO -DAUTHENTICATE -DENCRYPT
-CFLAGS+=-I/usr/src/lib
+CFLAGS+=-I${.CURDIR}/../../lib
 
 CFLAGS+= -DKRB4
 
