--- a/share/tmac/Makefile
+++ b/share/tmac/Makefile
@@ -1,6 +1,7 @@
-#	@(#)Makefile	6.9 (Berkeley) 06/29/90
+#	@(#)Makefile	6.10 (Berkeley) 03/07/91
 
-FILES=	tmac.an.old tmac.r tmac.doc tmac.andoc
+FILES=	tmac.an.old tmac.r tmac.doc tmac.andoc tmac.doc.old tmac.doc-ditroff \
+	tmac.doc-nroff tmac.doc-common tmac.doc-syms
 LINKS=	${BINDIR}/tmac/tmac.andoc ${BINDIR}/tmac/tmac.an
 NOOBJ=	noobj
 
