need dependencies for dumprmain.o and dumprtape.o

--- a/sbin/dump/Makefile
+++ b/sbin/dump/Makefile
@@ -1,4 +1,4 @@
-#	@(#)Makefile	5.11 (Berkeley) 07/01/90
+#	@(#)Makefile	5.12 (Berkeley) 03/07/91
 
 #	dump.h			header file
 #	dumpitime.c		reads /etc/dumpdates
@@ -25,10 +25,10 @@ all: rdump
 rdump: ${ROBJS} ${LIBC}
 	${CC} -o ${.TARGET} ${CFLAGS} ${ROBJS}
 
-dumprmain.o:
+dumprmain.o: dumpmain.o
 	${CC} -c -DRDUMP ${CFLAGS} ${.CURDIR}/dumpmain.c -o ${.TARGET}
 
-dumprtape.o:
+dumprtape.o: dumptape.o
 	${CC} -c -DRDUMP ${CFLAGS} ${.CURDIR}/dumptape.c -o ${.TARGET}
 
 afterinstall:
