--- a/old/mkpasswd/Makefile
+++ b/old/mkpasswd/Makefile
@@ -1,6 +1,8 @@
-#	@(#)Makefile	5.3 (Berkeley) 05/11/90
+#	@(#)Makefile	5.4 (Berkeley) 03/08/91
 
 PROG=	mkpasswd
 MAN8=	mkpasswd.0
+DPADD=	${LIBDBM}
+LDADD=	-ldbm
 
 .include <bsd.prog.mk>
