break crc routine out into separate module; for use by mtree(8)

--- a/usr.bin/cksum/Makefile
+++ b/usr.bin/cksum/Makefile
@@ -1,5 +1,6 @@
-#	@(#)Makefile	5.1 (Berkeley) 03/08/91
+#	@(#)Makefile	5.2 (Berkeley) 04/01/91
 
 PROG=	cksum
+SRCS=	cksum.c crc.c
 
 .include <bsd.prog.mk>
