needs -I/sys for pcb.h

--- a/usr.bin/ktrace/Makefile
+++ b/usr.bin/ktrace/Makefile
@@ -1,7 +1,8 @@
-#	@(#)Makefile	5.1 (Berkeley) 01/17/91
+#	@(#)Makefile	5.2 (Berkeley) 04/27/91
 
 PROG=	ktrace
 SRCS=	ktrace.c subr.c
+CFLAGS+=-I/sys
 
 .include "../../Makefile.inc"
 .include <bsd.prog.mk>
