needs -I/sys for pcb.h

--- a/usr.bin/kdump/Makefile
+++ b/usr.bin/kdump/Makefile
@@ -1,7 +1,7 @@
-#	@(#)Makefile	5.1 (Berkeley) 05/11/90
+#	@(#)Makefile	5.2 (Berkeley) 04/27/91
 
 PROG=	kdump
-CFLAGS+=-I${.CURDIR}/../ktrace
+CFLAGS+=-I/sys -I${.CURDIR}/../ktrace
 SRCS=	kdump.c ioctl.c subr.c
 .PATH:	${.CURDIR}/../ktrace
 CLEANFILES+=ioctl.c
