--- a/sbin/Makefile
+++ b/sbin/Makefile
@@ -1,9 +1,9 @@
-#	@(#)Makefile	5.3 (Berkeley) 06/25/90
+#	@(#)Makefile	5.4 (Berkeley) 05/06/91
 
 SUBDIR=	XNSrouted badsect clri disklabel dmesg dump dumpfs fastboot fsck \
 	fsdb halt icheck ifconfig init mknod mount mountd ncheck newfs \
 	nfsd nfsiod ping quotacheck reboot restore route routed savecore \
-	shutdown slattach swapon tunefs umount vipw
+	shutdown slattach swapon tunefs umount
 
 .if   make(clean) || make(cleandir)
 SUBDIR+=enpload
