branch for the 2nd network distribution

--- a/share/dict/Makefile
+++ b/share/dict/Makefile
@@ -1,6 +1,8 @@
-#	@(#)Makefile	5.1 (Berkeley) 06/19/90
+#	@(#)Makefile	5.1.1.1 (Berkeley) 05/07/91
 
-FILES=	README connectives propernames web2 web2a words
+# Missing: connectives, words
+
+FILES=	README propernames web2 web2a
 NOOBJ=	noobj
 
 all clean cleandir depend lint tags:
